Fixed contact not working on mobile; temporarily fixed button border by adding in project - will need to adjust for mobile screen, probably remove outline; increased font-size

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -77,7 +77,7 @@ h1 {
 
 p { 
     padding: 0 20px 30px 20px;
-    font-size: 18px;
+    font-size: 19px;
     line-height: 30px;
 }
 
@@ -93,7 +93,7 @@ p.caption {
 ul {
     padding: 0 20px 30px 60px;
     margin-top: -30px;
-    font-size: 18px;
+    font-size: 19px;
     line-height: 30px;
     list-style-type: disc;
 }
@@ -126,19 +126,20 @@ a::selection {
 }
 
 #buttons a {
-    width: 50%;
+    width: 33%;
     height: 50px;
     text-decoration: none;
     float: left;
-    font-size: 20px;
+    font-size: 19px;
     line-height: 50px;
     outline: 1px solid white;
     border-bottom: 1px solid white;
+    color: white;
 }
 
 @media (min-width: 700px) {
     #buttons a { 
-	width: 349px;
+	width: 232px;
     }
 
     #buttons a:first-child {
@@ -208,17 +209,24 @@ img {
 
 .icon, .contact {
     margin: 0 auto;
-    height: 32px;
-    text-align: center;    
+    text-align: center;
 }
 
 .icon {
-    width: 72px;
+    height: 32px;
 }
 
 .contact {
-    width: 360px;
-    padding-bottom: 30px;
+    width: 100%;
+    float: left;
+}
+
+@media (min-width: 360px) {
+    .contact {
+	float: none;
+	width: 360px;
+	height: 62px;
+    }
 }
 
 .icon .iconw, .gmailw, .gmail, .linkedinw, .linkedin, 
@@ -227,8 +235,12 @@ img {
     height: 32px;
     padding: 0;
     float: left;
-    margin: 0 20px 0 20px;
+    margin: 0 20px 20px 20px;
     background-repeat: no-repeat;
+}
+
+.icon .iconw {
+    background-image: url('/iconw.png')
 }
 
 .icon .iconw:hover {
